
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_RaspberryPi.la
libmmgr_dal_RaspberryPi_la_SOURCES = RaspberryPi.cpp RaspberryPi.h gpio.c gpio.h \
   ../../MMDevice/MMDevice.h ../../MMDevice/DeviceBase.h
libmmgr_dal_RaspberryPi_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_RaspberryPi_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)
